<resources>
    <string name="app_name">Weather App</string>
    <string name="title_activity_main">Forecast</string>
    <string name="loading_your_forecast">Loading your forecast…</string>
    <string name="error_message">We are unable to contact the server</string>
    <string name="retry">Retry</string>
    <string name="retrieving_your_location_please_wait">Retrieving your location please wait</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="id">Id:</string>
    <string name="text">Text:</string>
    <string name="forecast_list">Forecast List</string>
    <string name="word_list">Word List</string>
    <string name="are_you_sure">Are you sure you want to delete %1$s</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="update_location">Update Location</string>
    <string name="save_location">Save Location</string>
    <string name="add_location">Add Location</string>
</resources>
