<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ui.forecast.ForecastActivity">

    <!--Main -->
    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <TextView
                android:layout_marginEnd="@dimen/eight_device_pixels"
                android:layout_marginRight="@dimen/eight_device_pixels"
                android:layout_marginLeft="@dimen/eight_device_pixels"
                android:layout_marginStart="@dimen/eight_device_pixels"
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="68sp"
                android:gravity="center"
                tools:text="28 \u2103"
                />
            <TextView
                android:id="@+id/today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/eight_device_pixels"
                android:paddingLeft="@dimen/eight_device_pixels"
                android:paddingRight="@dimen/eight_device_pixels"
                android:paddingStart="@dimen/eight_device_pixels"
                android:paddingEnd="@dimen/eight_device_pixels"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_margin="@dimen/eight_device_pixels"
                tools:text="Today, 05 Oct 2018"/>
            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/eight_device_pixels"
                tools:text="Clear throughout the day."
                />
            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/eight_device_pixels"
                android:paddingLeft="@dimen/eight_device_pixels"
                android:paddingRight="@dimen/eight_device_pixels"
                android:paddingStart="@dimen/eight_device_pixels"
                android:paddingEnd="@dimen/eight_device_pixels"
                android:gravity="center"
                tools:text="Peerles Park"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/four_device_pixels"
            android:layout_margin="@dimen/twenty_device_pixels"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_device_pixels"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/block"
                tools:layout_editor_absoluteX="66dp">

                <TextView
                    android:id="@+id/min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:maxLines="1"
                    tools:text="5"
                    android:layout_marginBottom="@dimen/eight_device_pixels"
                    />
                <TextView
                    android:id="@+id/label"
                    android:textSize="12sp"
                    android:text="@string/min"
                    android:gravity="end"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View android:layout_width="1dp" android:layout_height="match_parent" />
            <LinearLayout
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_device_pixels"
                android:gravity="center"
                android:background="@drawable/block">

                <TextView
                    android:id="@+id/max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:maxLines="1"
                    tools:text="10"
                    android:layout_marginBottom="@dimen/eight_device_pixels"
                    />
                <TextView
                    android:textSize="12sp"
                    android:text="@string/max"
                    android:gravity="end"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View android:layout_width="1dp" android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_device_pixels"
                android:gravity="center"
                android:background="@drawable/block"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:maxLines="1"
                    tools:text="15"
                    android:layout_marginBottom="@dimen/eight_device_pixels"
                    />
                <TextView
                    android:textSize="12sp"
                    android:text="@string/pressure"
                    android:maxLines="1"
                    android:gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View android:layout_width="1dp" android:layout_height="match_parent" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_device_pixels"
                android:gravity="center"
                android:background="@drawable/block"
                tools:layout_editor_absoluteX="66dp">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:maxLines="1"
                    tools:text="20"
                    android:layout_marginBottom="@dimen/eight_device_pixels"
                    />
                <TextView
                    android:textSize="12sp"
                    android:text="@string/humidity"
                    android:gravity="end"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--Progress -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
        android:id="@+id/progress_container"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="@dimen/sixty_four_device_pixels"
            android:layout_height="@dimen/sixty_four_device_pixels"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_device_pixels"
            android:gravity="center"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/retrieving_your_location_please_wait"
            android:textStyle="bold"/>
    </LinearLayout>

    <!--retry -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
        android:id="@+id/retry_container"
        tools:visibility="visible">

        <ImageView android:layout_width="@dimen/sixty_four_device_pixels"
            android:src="@drawable/ic_retry"
            android:layout_height="@dimen/sixty_four_device_pixels"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/error_message"
            android:textStyle="bold"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_gravity="center"
            android:layout_margin="@dimen/twenty_device_pixels"
            android:gravity="center"
            android:visibility="visible"/>

    </LinearLayout>
</LinearLayout>